<resources>
    <string name="app_name">Secure Note</string>
    <string name="encrypted">Encrypted</string>
    <string name="addNoteTitle">Add Note</string>
    <string name="editNoteTitle">Edit Note</string>
    <string name="save_note">Save Note</string>
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="no_title">Notes must have a Title.</string>
    <string name="encrypt_question">Encrypt?</string>
    <string name="password">Enter Password</string>
    <string name="password_confirm">Confirm Password</string>
    <string name="pass_cancel">Cancel</string>
    <string name="pass_accept">Accept</string>
    <string name="pass_prompt_cancel">Enter Password Canceled</string>
    <string name="bad_decrypt">Decryption Failed. Try different password.</string>
    <string name="encrypt_pass_empty">Must enter a password to encrypt.</string>
    <string name="decrypt_pass_empty">Must enter a password to decrypt.</string>
    <string name="pass_no_match">Entered passwords do not match.</string>
    <string name="about_title">About</string>
    <string name="Thank_you">Thank you for downloading this app. You can find its source code here:</string>
    <string name="license">This app is licensed under the MIT License. Read it here:</string>
    <string name="app_url"><a href="https://github.com/kgodinho/Secure_Note">https://github.com/kgodinho/Secure_Note</a></string>
    <string name="license_url"><a href="https://github.com/kgodinho/Secure_Note/blob/master/LICENSE">License page on Github</a></string>
</resources>