<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/passPrompt"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:autofillHints="@string/password"
    android:background="@color/white"
    android:orientation="vertical">

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/password"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textColorHint="@android:color/darker_gray" />

    <EditText
        android:id="@+id/etPasswordConfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/password_confirm"
        android:ems="10"
        android:hint="@string/password_confirm"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textColorHint="@android:color/darker_gray" />

    <LinearLayout
        style="@android:style/Widget.Material.ButtonBar.AlertDialog"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:paddingTop="10dp">

        <Button
            android:id="@+id/buPassCancel"
            style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/pass_cancel"
            android:textColor="@color/black"
            app:rippleColor="@color/encryption" />

        <Button
            android:id="@+id/buPassAccept"
            style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="10dp"
            android:text="@string/pass_accept"
            android:textColor="@color/black"
            app:rippleColor="@color/encryption" />
    </LinearLayout>
</LinearLayout>